--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -5,8 +5,15 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue</string>
+            <string>HelveticaNeue-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Reveal View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -38,15 +45,70 @@
                         <viewControllerLayoutGuide type="top" id="AHr-Cx-FcS"/>
                         <viewControllerLayoutGuide type="bottom" id="IGw-6G-1Vo"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="cUM-iV-QVM">
+                    <view key="view" contentMode="scaleToFill" id="cUM-iV-QVM" customClass="GradientView" customModule="Smack" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DWQ-6f-ZZw">
+                                <rect key="frame" x="16" y="40" width="63" height="23"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHANNELS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k7Z-I2-Va2">
+                                <rect key="frame" x="16" y="83" width="91" height="20"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FuK-Jm-06j">
+                                <rect key="frame" x="281" y="82" width="22" height="22"/>
+                                <state key="normal" image="addChannelButton"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="NtP-I6-1pt">
+                                <rect key="frame" x="16" y="548" width="99" height="99"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" sectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Qez-Yl-VE4">
+                                <rect key="frame" x="0.0" y="119" width="375" height="414"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AZt-WQ-6BV">
+                                <rect key="frame" x="140" y="529" width="54" height="138"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="LOGIN">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DWQ-6f-ZZw" firstAttribute="leading" secondItem="cUM-iV-QVM" secondAttribute="leadingMargin" id="3JV-7Z-N3P"/>
+                            <constraint firstAttribute="trailing" secondItem="FuK-Jm-06j" secondAttribute="trailing" constant="72" id="3hs-dy-5nN"/>
+                            <constraint firstItem="DWQ-6f-ZZw" firstAttribute="top" secondItem="AHr-Cx-FcS" secondAttribute="bottom" constant="20" id="7mb-Uo-qCj"/>
+                            <constraint firstItem="NtP-I6-1pt" firstAttribute="leading" secondItem="cUM-iV-QVM" secondAttribute="leadingMargin" id="HTj-0b-bjf"/>
+                            <constraint firstAttribute="trailing" secondItem="Qez-Yl-VE4" secondAttribute="trailing" id="NGs-UP-O0v"/>
+                            <constraint firstItem="Qez-Yl-VE4" firstAttribute="top" secondItem="FuK-Jm-06j" secondAttribute="bottom" constant="15" id="PKu-GI-o1I"/>
+                            <constraint firstItem="k7Z-I2-Va2" firstAttribute="leading" secondItem="cUM-iV-QVM" secondAttribute="leadingMargin" id="QPg-WX-fur"/>
+                            <constraint firstItem="NtP-I6-1pt" firstAttribute="top" secondItem="Qez-Yl-VE4" secondAttribute="bottom" constant="15" id="Ric-KN-Cam"/>
+                            <constraint firstItem="k7Z-I2-Va2" firstAttribute="top" secondItem="DWQ-6f-ZZw" secondAttribute="bottom" constant="20" id="RxF-Tb-lBI"/>
+                            <constraint firstItem="FuK-Jm-06j" firstAttribute="centerY" secondItem="k7Z-I2-Va2" secondAttribute="centerY" id="aua-xb-HuP"/>
+                            <constraint firstItem="AZt-WQ-6BV" firstAttribute="centerY" secondItem="NtP-I6-1pt" secondAttribute="centerY" id="bJ2-kL-sce"/>
+                            <constraint firstItem="IGw-6G-1Vo" firstAttribute="top" secondItem="NtP-I6-1pt" secondAttribute="bottom" constant="20" id="br9-sX-lEP"/>
+                            <constraint firstItem="AZt-WQ-6BV" firstAttribute="leading" secondItem="NtP-I6-1pt" secondAttribute="trailing" constant="25" id="kAB-kC-AJy"/>
+                            <constraint firstItem="IGw-6G-1Vo" firstAttribute="top" secondItem="AZt-WQ-6BV" secondAttribute="bottom" id="kLM-Qi-hMs"/>
+                            <constraint firstItem="Qez-Yl-VE4" firstAttribute="leading" secondItem="cUM-iV-QVM" secondAttribute="leading" id="wlN-p4-GLY"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="bottomColor">
+                                <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bLU-B4-ldq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="938" y="-267"/>
+            <point key="canvasLocation" x="936.79999999999995" y="-267.61619190404798"/>
         </scene>
         <!--ChatVC-->
         <scene sceneID="Ig4-yn-IXw">
@@ -60,7 +122,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="22a-Xj-KRE">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="22a-Xj-KRE" customClass="GradientView" customModule="Smack" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1DW-3Z-d9n">
@@ -105,6 +167,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="addChannelButton" width="22" height="22"/>
+        <image name="menuProfileIcon" width="99" height="99"/>
         <image name="smackBurger" width="40" height="40"/>
     </resources>
 </document>
