--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -351,6 +351,9 @@
                                 <state key="normal" title="Create Account">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="crezteAccount:" destination="xM6-pm-q1x" eventType="touchUpInside" id="mlb-aL-Asf"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create an account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NWP-5z-ljm">
                                 <rect key="frame" x="99" y="70" width="176" height="24"/>
@@ -414,6 +417,10 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="createaccountpressed" destination="jYT-SU-Z1v" id="fTF-t0-qzY"/>
+                        <outlet property="email" destination="jdZ-W2-FdB" id="Tbu-oF-TeL"/>
+                        <outlet property="password" destination="6a4-Bw-3tG" id="wuv-Jp-f4k"/>
+                        <outlet property="username" destination="wLS-Ll-hBh" id="fbh-tE-S6m"/>
                         <segue destination="qiO-I3-Gvi" kind="unwind" identifier="UnwindSegue" unwindAction="prepareForUnwindWithSegue:" id="U1q-db-smF"/>
                     </connections>
                 </viewController>
